# MSPM0_APPS

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  openocd.cfg  preprocess_syscfg.py  readme.md  toolchain.cmake
src/common/: gpio_toggle_output.c  gpio_toggle_output.syscfg  main.syscfg
